<resources>
    <string name="app_name">CookBook</string>
    <string name="introduction_one">Welcome to Cookbook.</string>
    <string name="introduction_two">There are no stored recipes currently.</string>
    <string name="introduction_three">Click the menu icon in the toolbar to begin.</string>

    <string name="file_upload_directions">Enter the name of a recipe you have as a file on your phone. The app will convert that file into a recipe and upload it into the application. Data formats supported: .txt, .doc, .pdf, .rtf.</string>
    <string name="url_upload_directions">Enter the url for a recipe on a website. The app will scan the page and upload the recipe into the application.</string>
    <string name="email_upload_directions">Enter the subject line for the email that has a recipe ready to be upload. The application will scan the email and upload the recipe into the application.</string>


    <string name="file_upload_tooltip">Enter the name of a recipe you have as a file on your phone. The names need to match exactly. Include the "." extension in the file name (e.g, .txt). The app will convert that file into a recipe by parsing the text in the file and then upload it into the application. There should be clear delineations where ingredients start and directions start. If you wish for other fields to be copied. Clearly mark them (e.g, "Yield:"). Data formats supported: .txt, .doc, .pdf, .rtf.</string>
    <string name="url_upload_tooltip">Enter the url for a recipe on a website. The app will parse the html of the web page and then upload the recipe into the application. This process can be time-consuming and is prone to error based on the particular website\'s format. Please try to upload from reputable websites. If you are familiar with HTML, then make sure the ingredients and directions are separated into divs, articles, or lists before uploading. Otherwise, the upload procedure may print out the recipe in an unintended way.</string>
    <string name="email_upload_tooltip">Enter the subject line for the email that has a recipe ready to be upload. The application will scan the text in the email and then upload the recipe into the application. The easiest way to do this upload is to be on the receiving end of a shared email from this app. Otherwise, the format of the email needs to be precise. The subject line needs to be clearly marked "[\'Recipe Name\'] - Cookbook". The body needs to have clear delineations between what is the ingredient list and what is the direction list in order for the formatting to come out fine. If you are trying to send a recipe file via email, please download the file onto your device and upload from file instead.</string>


    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>


    <string name="edit_step">Edit this Direction</string>
    <string name="delete_step">Delete this Direction</string>
    <string name="attach_step">Add Attachment</string>
    <string name="edit_ingredient">Edit this Ingredient</string>
    <string name="delete_ingredient">Delete this Ingredient</string>

    <string name="help">Welcome to CookBook! In this app, you have the power to write new recipes, upload recipes from existing sources, display those recipes, store and organize those recipes, and even make a grocery list from them! Let\'s get started. Press the topic name you are interested in to learn more.</string>

    <string name="tutorial_1">Writing New Recipes is a cinch! Starting from the home screen, press the menu icon in the top right corner of the app. Select the "Write New Recipe" option from the drop-down menu. You will now be at a screen where you can begin writing your recipe. Have fun! </string>
    <string name="tutorial_2">Uploading recipes is very useful! Starting from the home screen, press the menu icon in the top right corner of the app. Select the "Upload Recipe" option from the drop-down menu. You should now be at the Upload Recipe screen. From here, you can follow the directions for a file upload, an internet upload, or an email upload. If you need additional details, press the "i" info icon. When you have entered the correct information, press the "file upload" icon next the editable text box to begin uploading the recipe into your app.</string>
    <string name="tutorial_3">Displaying your recipes has never been easier! Starting from the home screen, press one of the bold categories to collapse it. You should now see your recipes underneath. Press one of your recipes to view it! You should see a detailed page of your recipe. You can cook your recipe from here for easy use or if preferred, you can click one of the direction steps to get a blown up perspective along with any files that may be attached to that step.</string>
    <string name="tutorial_4">Store and organize all your recipes in one place! Your home screen will display categories you have stored your recipes in. Pressing one of the bold categories will collapse it showing the recipes stored underneath. If you want to change your categories or tags then starting from the home screen, press the menu icon in the top right corner of the app. Select the "Manage Categories/Tags" option from the drop-down menu. From here, you can press the "+" button to add a new category or tag or press the trash can icons to delete the corresponding category or tag. If you want to change the category or tags a recipe falls under, you need to do that from the Edit Recipe screen. To navigate there, return to the home screen. Collapse the category of the recipe you are looking for. Press the recipe you want. On the recipe screen, press the pencil icon on the toolbar. This will open up the edit recipe screen. From here, scroll down and save the recipe. This will open the dialog that lets you re-assign categories and tags.</string>
    <string name="tutorial_5">Make a grocery list from your recipes! Starting from the home screen, press the menu icon in the top right corner of the app. From the drop-down menu, select "Make Grocery List". You will be taken to a new screen that displays all your recipes. Press the bold category names to collapse them and see your recipes underneath. Your recipes will now have a checkbox which allows you to mark which recipes you want to make the list from. When you are finished selecting recipes, hit the "Create List" button. You will be taken to your grocery list now. You can hit the menu icon at the top right corner of the screen to see more options including saving this list, sharing, and deleting it.</string>
</resources>
