<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/browse_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.SearchView
        android:id="@+id/browse_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search for recipes">
    </android.support.v7.widget.SearchView>
    <View
        android:id="@+id/menu_placement"
        android:layout_alignParentRight="true"
        android:layout_width="1dp"
        android:layout_height="1dp">
    </View>
    <ExpandableListView
        android:id="@+id/browse_expandable_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/browse_search">
    </ExpandableListView>
    <LinearLayout
        android:id="@+id/empty_recipe_view"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:text="@string/introduction_one"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:text="@string/introduction_two"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:text="@string/introduction_three"/>
    </LinearLayout>


</RelativeLayout>